--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -2,7 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
+/* Components */
 @import "cmps/user-msg.css";
+@import "cmps/review-item.css";
+@import "cmps/review-preview.css";
+@import "cmps/review-list.css";
+
+/* Pages */
+@import "pages/BookEdit.css";
 
 /* Vars */
 :root {
@@ -312,9 +319,9 @@ a.active {
 .book-details-container {
   position: relative;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 3fr 2fr;
   gap: 30px;
-  height: 60vh;
+  /* height: 60vh; */
   margin-top: 20px;
   background-color: var(--clr1bg-light);
   padding: 20px;
@@ -382,6 +389,7 @@ a.active {
 	display: flex;
 	gap: 20px;
 	align-items: center;
+  width: 60%;
 }
 
 .book-filter-form section label {
@@ -399,4 +407,30 @@ a.active {
 	padding: 20px;
 	border-radius: 0 0 0 30px;
 }
+
+.review-container {
+  margin-top: 30px;
+}
+
+.review-container section{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.review-container section button {
+  font-size: 1em;
+  border-radius: 20px;
+  border: 1px solid grey;
+  text-align: center;
+}
+
+.add-book-btn {
+  margin: 0;
+  margin-top: 30px;
+  padding: 10px;
+  width: 10%;
+}
+
+
 
