--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -7,6 +7,7 @@
 @import "cmps/review-item.css";
 @import "cmps/review-preview.css";
 @import "cmps/review-list.css";
+@import "cmps/add-review.css";
 
 /* Pages */
 @import "pages/BookEdit.css";
@@ -431,6 +432,7 @@ a.active {
   padding: 10px;
   width: 10%;
 }
+
 
 
 
